--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,28 +1,46 @@
+:root {
+  --mn-L-text-color: #0f0f0f;
+  --mn-D-text-color: #f0f0f0;
+}
+
 .navbar{
 background: url(../../img/head6.png) !important;
 background-size: cover !important;
-background-position: 35% 50% !important;
-overflow : hidden !important;
-text-transform: uppercase !important;
+background-position: 0% 50% !important;
+#background-repeat: repeat-x;
+#overflow : hidden !important;
+#text-transform: uppercase !important;
+mix-blend-mode: hard-light;
+z-index: 10;
+height: 7vh !important;
 }
+
 .nav-item,.nav-link{
 color: rgb(235,250,255) !important;
-mix-blend-mode: darken !important;
+#mix-blend-mode: darken !important;
+#isolation: isolate !important;
+}
+.nav-link.dropdown-toggle::after{
+ color: #ff0000 !important;
+#mix-blend-mode: difference !important;
 }
 .navbar-brand{
 color: rgb(250,250,250) !important;
-mix-blend-mode: darken !important;
-font-variant: normal !important;
+#mix-blend-mode: exclusion !important;
+font-family: Sakura Kei !important;
+text-transform: capitalize !important;
+font-size: 18px !important;
+#font-variant: small-caps;
 }
 
 .Main{
-image = "test2.jpg";
-filter: invert(0) !important;
+image: "test2.jpg";
+filter: invert(0) brightness(2)!important;
 }
 
 .dark .Main{
-image = "test2.jpg";
-filter: invert(1) !important;
+image: "test2.jpg";
+filter: invert(1) brightness(0.5) !important;
 }
 
 .Main::before{
@@ -73,24 +91,194 @@ left: 0;
 }
 
 #-----------------------
+
+p{}
+
+#main{
+top:7vh;
+margin-top:0px;
+padding-top: 0px !important;
+}
+
+.bio{
+#color: rgb(250,250,250);
+#mix-blend-mode: difference;
+background: rgba(0,0,0,0) !important;#backdrop-filter: blur(40px);
+}
+
+
+#top::before{
+content: "";
+background: url(../../img/music.png) !important;
+background-size: cover !important;
+position: fixed !important;
+    width: 100vw !important;
+    height: 100vh !important;
+filter: blur(1px);
+top: 9.35vh;
+bottom:0px;
+left: 2.35vw;
+right: 0px;
+z-index: -4;
+transform: scale(1.05); 
+}
+
+#bkgd{
+content: "";
+perspective: 320px;
+background: url(../../img/musicL.png) !important;
+background-size: cover !important;
+position: absolute !important;
+  background-attachment: fixed !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    height: 100%;
+#overflow-x: hidden;
+overflow-y: hidden;
+top:calc(5.75vh + 1px);
+right:0px;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+z-index: -3;
+transform: translateZ(4px) scale(0.9875);
+#filter: invert(1) !important;
+}
+
+.dark #bkgd{
+background: url(../../img/music.png) !important;
+content: "";
+perspective: 320px;
+background-size: cover !important;
+position: absolute !important;
+  background-attachment: fixed !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    height: 100%;
+#overflow-x: hidden;
+overflow-y: hidden;
+top:calc(5.75vh + 1px);
+right:0px;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+z-index: -3;
+transform: translateZ(4px) scale(0.9875);
+filter: invert(0) !important;
+}
+
+#top{
+#background: url(../../img/test2.jpg) !important;
+background: rgba(0,0,0,0) !important;
+min-height: 100% !important;
+data-offset: 7vh !important;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #f00;
+    margin: 1em 0;
+    padding: 0;
+}
+
+.vhr{
+border-left: 1px solid #ccc;
+margin-right: 10px;
+}
+
 div{
-background: rgba(0,0,0,0);
+background: rgba(0,0,0,0) ;
 font-family: Aron Grotesque Light;
 font-variant-ligatures: none;
+}
+
+h1{
+font-family: Zenzai Itacha !important;
+font-size: xxx-large !important;
+mix-blend-mode: difference;
 }
 
 h2{
 font-family: Montserrat Light;
 text-transform: lowercase !important;
 font-variant: small-caps;
+color: var(--mn-L-text-color);
 }
 
+
 h3{
-#font-family: Zenzai Itacha !important;
+font-family: Montserrat !important;
 text-transform: lowercase !important;
 font-variant: small-caps;
-#font-style: italic;
+color: var(--mn-L-text-color);
 }
+.dark h3{
+color: var(--mn-D-text-color);
+}
+
 .container{
 z-index: 0;
+}
+
+.halign {
+    float:left;
+    padding-left: 10px;
+}
+.rhalign {
+    float:right;
+    padding-right: 10px;
+}
+.rhalign {
+    float:right;
+    padding-right: 10px;
+}
+.valign {
+    float:top;
+    padding-top: 10px;
+}
+
+.universal-wrapper {
+    width: 85vw !important;
+    max-width: 85vw !important;
+    overflow-x: hidden;
+}
+
+.universal-wrapper,.universal-wrapper.pt-3,.article-style{
+background: rgba(0,0,0,0);
+}
+.universal-wrapper.pt-3{
+height:0px;
+overflow-y:hidden;
+}
+
+.sty{
+font-family: Gabriola;
+font-style: italic;
+font-size: x-large;
+}
+
+.notet{
+font-size:small;
+color:rgba(20,20,20,1);
+}
+.dark .notet{
+color:rgba(200,200,200,1);
+}
+
+.site-footer{
+height: 0.1vh;
+margin: 0 auto;
+padding: 0;
+}
+
+.blur{
+backdrop-filter: blur(5px);
 }
