--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -98,10 +98,11 @@ margin-top:0px;
 padding-top: 0px !important;
 }
 
-.bio{
+.exp,.skill,.kontakt{
 #color: rgb(250,250,250);
 #mix-blend-mode: difference;
-background: rgba(0,0,0,0) !important;#backdrop-filter: blur(40px);
+background: rgba(0,0,0,0) !important;
+#backdrop-filter: blur(40px);
 }
 
 
@@ -169,6 +170,10 @@ right:0px;
 z-index: -3;
 transform: translateZ(4px) scale(0.9875);
 filter: invert(0) !important;
+}
+
+.form-control{
+background: rgba(0,0,0,0) !important;
 }
 
 #top{
