--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -10,10 +10,47 @@ background-position: 0% 50% !important;
 #background-repeat: repeat-x;
 #overflow : hidden !important;
 #text-transform: uppercase !important;
-mix-blend-mode: hard-light;
+mix-blend-mode: luminosity !important;
+backdrop-filter: blur(40px);
 z-index: 10;
 height: 7vh !important;
 }
+
+.dark .navbar{
+background: url(../../img/head6.png) !important;
+background-size: cover !important;
+background-position: 0% 50% !important;
+#background-repeat: repeat-x;
+#overflow : hidden !important;
+#text-transform: uppercase !important;
+mix-blend-mode: hard-light !important;
+backdrop-filter: blur(10px);
+z-index: 10;
+height: 7vh !important;
+}
+
+#top::after{
+content:"";
+background: rgba(0,0,0,0) !important;
+position: fixed;
+top:0;
+left:0;
+width:100vw;
+height:7vh;
+z-index: -2 !important;
+}
+
+#top.dark::after{
+content:"";
+background: rgba(0,0,0,1) !important;
+position: fixed;
+top:0;
+left:0;
+width:100vw;
+height:7vh;
+z-index: -2 !important;
+}
+
 
 .nav-item,.nav-link{
 color: rgb(235,250,255) !important;
@@ -42,6 +79,7 @@ filter: invert(1) !important;
 }
 
 .Main::before{
+perspective: 320px;
 z-index: -2;
 -webkit-transform: translateZ(0);
     position: fixed;
@@ -51,6 +89,7 @@ z-index: -2;
   margin-left: 0px;
   margin-bottom: 0px;
   margin-right: 0px;
+  display: flex;
 overflow : hidden;
 height: 100%;
 width: 100%;
@@ -61,13 +100,11 @@ content: "";
 }
 
 .Main{
+perspective: 320px;
 padding-top: 0px !important;
 padding-left: 0px !important;
 padding-right: 0px !important;
 padding-bottom: 0px !important;
-position: fixed;
-width:100%;height:100%;
-left: 0;
   margin-top: 0px;
   margin-left: 0px;
   margin-bottom: 0px;
@@ -75,7 +112,21 @@ left: 0;
 #background: rgba(0,0,0,0);
 #background: url(../../img/main.png) !important;
 #backdrop-filter: blur(0px);
-#-webkit-backdrop-filter: blur(0px)
+#-webkit-backdrop-filter: blur(0px);
+position: absolute !important;
+  background-attachment: fixed !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+background-size: 100% auto;
+    width: 98.75vw !important;
+    max-width: 98.75vw !important;
+    height: 100%;
+overflow-x: hidden;
+overflow-y: hidden;
+top:calc(5.0vh + 1px);
+left:0px !important;
+z-index: -3;
+transform: translateZ(4px) scale(0.9875);
 }
 
 #bgVideo{
@@ -98,17 +149,17 @@ margin-top:0px;
 padding-top: 0px !important;
 }
 
-.exp,.kontakt{
+.bio,.exp,.skill,.kontakt{
 #color: rgb(250,250,250);
 #mix-blend-mode: difference;
 background: rgba(0,0,0,0) !important;
 #backdrop-filter: blur(40px);
 }
 
-.skill{
+test{
 #color: rgb(250,250,250);
-#background: rgba(255,255,255,0.2) !important;
-backdrop-filter: blur(100px);
+#background: rgba(0,0,0,0.0) !important;
+#backdrop-filter: blur(100px);
 #font-weight: bold;
 filter: drop-shadow(1px 1px 1px black);
 }
@@ -125,18 +176,22 @@ top:-.128vh !important;
 
 #top::before{
 content: "";
-background: url(../../img/music.png) !important;
+background: rgba(0,0,0,1) !important;
 background-size: cover !important;
 position: fixed !important;
     width: 100vw !important;
     height: 100vh !important;
-filter: blur(1px);
+#filter: blur(1px);
 top: 9.35vh;
 bottom:0px;
 left: 2.35vw;
 right: 0px;
 z-index: -4;
 transform: scale(1.05); 
+}
+
+#top.dark::before{
+background: rgba(0,0,0,1) !important;
 }
 
 #bkgd{
@@ -165,7 +220,7 @@ transform: translateZ(4px) scale(0.9875);
 }
 
 .dark #bkgd{
-background: url(../../img/music.png) !important;
+background: url(../../img/roc.png) !important;
 content: "";
 perspective: 320px;
 background-size: cover !important;
@@ -200,13 +255,59 @@ min-height: 100% !important;
 data-offset: 7vh !important;
 }
 
+.wdmargin{
+padding: 1em 1em !important;
+backdrop-filter:blur(14px) !important;
+background-blend-mode: overlay !important;
+background-color: rgba(255,255,255,0.3) !important;
+}
+.dark .wdmargin{
+padding: 1em 1em !important;
+backdrop-filter:blur(14px) !important;
+#background-blend-mode: overlay !important;
+background-color: rgba(0,0,0,0.3) !important;
+}
+
+.nomargins{
+margin: 0em 0 !important;
+}
+.dark .nomargins{
+margin: 0em 0 !important;
+}
+
 hr {
     display: block;
-    height: 1px;
+    height: 10px !important;
     border: 0;
-    border-top: 1px solid #f00;
-    margin: 1em 0;
+    margin: 2em 0 !important;
     padding: 0;
+color: #000 !important;
+backdrop-filter: invert(1) !important;
+mix-blend-mode: difference !important;
+background-image:  none !important;
+background-position: center !important;
+background-blend-mode: overlay !important;
+background-color: #000 !important;
+filter: invert(0) drop-shadow(0px 4px 1px black) drop-shadow(0px 4px 4px black) !important;
+overflow: hidden;
+}
+
+.dark hr {
+    display: block;
+    height: 8px !important;
+    border: 0;
+    margin: 2em 0 !important;
+    padding: 0;
+color: #fff !important;
+background-image:  url(../../img/musicL3.png) !important;
+background-attachement: relative !important;
+background-position: 5% 25% !important;
+backdrop-filter: invert(0) !important;
+background-color: #000 !important;
+background-blend-mode: hard-light !important;
+mix-blend-mode: difference !important;
+filter: grayscale(1) invert(0) drop-shadow(1px 1px 1px black) drop-shadow(5px 4px 4px black) !important;
+overflow: hidden;
 }
 
 .vhr{
@@ -223,8 +324,17 @@ font-variant-ligatures: none;
 h1{
 font-family: Zenzai Itacha !important;
 font-size: xxx-large !important;
-mix-blend-mode: difference;
-filter: drop-shadow(6px 6px 2px black);
+color: #000 !important;
+-webkit-text-stroke: 0px white; /* width and color */
+filter: drop-shadow(2px 2px 1px white);
+}
+
+.dark h1{
+font-family: Zenzai Itacha !important;
+font-size: xxx-large !important;
+color: #fff !important;
+font-weight: 20;
+filter: drop-shadow(4px 4px 3px black);
 }
 
 h2{
