--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,28 +3,29 @@
   --mn-D-text-color: #f0f0f0;
 }
 
-.navbar{
+
+#------------------------
+
+#navbar-main, .navbar{
 background: url(../../img/head6.png) !important;
 background-size: cover !important;
 background-position: 0% 50% !important;
 #background-repeat: repeat-x;
-#overflow : hidden !important;
 #text-transform: uppercase !important;
-mix-blend-mode: luminosity !important;
+#mix-blend-mode: color !important;
 backdrop-filter: blur(40px);
 z-index: 10;
 height: 7vh !important;
 }
 
-.dark .navbar{
+.dark #navbar-main,.dark .navbar{
 background: url(../../img/head6.png) !important;
 background-size: cover !important;
 background-position: 0% 50% !important;
 #background-repeat: repeat-x;
-#overflow : hidden !important;
 #text-transform: uppercase !important;
 mix-blend-mode: hard-light !important;
-backdrop-filter: blur(10px);
+backdrop-filter: blur(40px);
 z-index: 10;
 height: 7vh !important;
 }
@@ -176,12 +177,14 @@ top:-.128vh !important;
 
 #top::before{
 content: "";
-background: rgba(0,0,0,1) !important;
+background-color: rgba(255,255,255,1) !important;
+background-image: url(../../img/musicL3.png) !important;
+background-blend-mode: difference;
 background-size: cover !important;
 position: fixed !important;
     width: 100vw !important;
     height: 100vh !important;
-#filter: blur(1px);
+filter: invert(1);
 top: 9.35vh;
 bottom:0px;
 left: 2.35vw;
@@ -191,8 +194,12 @@ transform: scale(1.05);
 }
 
 #top.dark::before{
-background: rgba(0,0,0,1) !important;
+background-color: rgba(0,0,0,1) !important;
+background-image: white !important;
+background-blend-mode: overlay !important;
+filter: invert(0);
 }
+
 
 #bkgd{
 content: "";
