--- a/layouts/partials/site_head.html
+++ b/layouts/partials/site_head.html
@@ -211,4 +211,5 @@
 
   <link disabled id="lightbar" href="css/lightbar.css" rel="stylesheet" type="text/css">
   <link id="darkbar" href="css/darkbar.css" rel="stylesheet" type="text/css">
+  <style>body{visibility:hidden;}</style>
 </head>
