--- a/static/css/darkbar.css
+++ b/static/css/darkbar.css
@@ -41,4 +41,10 @@ border-right-color: #000;
 border-right-width: 5px;
 border-left-width: 0px;
 border-right-style: solid;
+border-top-color: #000;
+border-bottom-color: #000;
+border-top-style: solid;
+border-bottom-style: solid;
+border-top-width: 5px;
+border-bottom-width: 5px;
 }
