--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,21 +3,32 @@
   --mn-D-text-color: #f0f0f0;
   --mn-L3-text-color: #0c0c0c;
   --mn-D3-text-color: #c0c0c0;
+  --mn-red-color: red;
 }
 
+html,body{
+  background-color: rgba(0,0,0,0);
+}
 
+.navbar
+{
+  margin-right: 0 !important;
+  padding: 0!important;
+}
 #------------------------
 
 #navbar-main, .navbar{
-background: url(../../img/head6.png) !important;
-background-size: cover !important;
-background-position: 0% 50% !important;
-#background-repeat: repeat-x;
+background: url(../../img/main.png) !important;
+background-size: 75% !important;
+background-position: 45% 13% !important;
+background-repeat: repeat-x;
 #text-transform: uppercase !important;
-#mix-blend-mode: color !important;
+mix-blend-mode: hard-light !important;
 backdrop-filter: blur(40px);
+filter: contrast(1.2) brightness(1);
 z-index: 10;
 height: 7vh !important;
+width: 100vw !important;
 }
 
 .dark #navbar-main,.dark .navbar{
@@ -27,14 +38,44 @@ background-position: 0% 50% !important;
 #background-repeat: repeat-x;
 #text-transform: uppercase !important;
 mix-blend-mode: hard-light !important;
+filter: contrast(1);
 backdrop-filter: blur(40px);
 z-index: 10;
 height: 7vh !important;
 }
 
+a.nav-link span{
+#background: rgba(0,0,0,0);
+background: inherit;
+mix-blend-mode: difference;
+text-shadow:1px 1px 2px black;
+filter: brightness(1);
+z-index: -2;
+}
+
+.nav-item,.nav-link{
+color: rgb(235,250,255) !important;
+mix-blend-mode: darken !important;
+#isolation: isolate !important;
+}
+.nav-link.dropdown-toggle::after{
+ color: #ff0000 !important;
+}
+.navbar-brand{
+color: rgb(250,250,250) !important;
+mix-blend-mode: color-dodge !important;
+font-family: Sakura Kei !important;
+text-transform: capitalize !important;
+text-transform: lowercase !important;
+font-size: 24px !important;
+#font-size: 18px !important;
+font-variant: small-caps;
+}
+
+
 #top::after{
 content:"";
-background: rgba(0,0,0,0) !important;
+background: rgba(255,255,255,0) !important;
 position: fixed;
 top:0;
 left:0;
@@ -54,35 +95,47 @@ height:7vh;
 z-index: -2 !important;
 }
 
+.Main,.inner {
+    position: absolute; 
+    z-index: 1; 
+    mix-blend-mode: hard-light;
+}
+.Main{
+background: rgba(255,0,0,1);
+height: 2000px;
+}
+.inner{
+margin-left: 10vw;
+max-width: 80vw;
+background: rgba(255,255,255,0);
+}
 
-.nav-item,.nav-link{
-color: rgb(235,250,255) !important;
-#mix-blend-mode: darken !important;
-#isolation: isolate !important;
-}
-.nav-link.dropdown-toggle::after{
- color: #ff0000 !important;
-#mix-blend-mode: difference !important;
-}
-.navbar-brand{
-color: rgb(250,250,250) !important;
-#mix-blend-mode: exclusion !important;
-font-family: Sakura Kei !important;
-text-transform: capitalize !important;
-text-transform: lowercase !important;
-font-size: 24px !important;
-#font-size: 18px !important;
-font-variant: small-caps;
-}
 
 .Main{
 #filter: invert(1) !important;
-#background: url(../../img/main0.jpeg) !important;
+background-image:  url("../../img/test2.jpg") !important;
+filter:contrast(0.8) brightness(4) saturate(0.3) hue-rotate(30deg);
+mix-blend-mode:normal !important;
+opacity:0.8;
 }
 
 .dark .Main{
 #filter: invert(0) !important;
-#background: url(../../img/main4.png) !important;
+background-image: url(../../img/main4.png) !important;
+filter:contrast(1) brightness(1) hue-rotate(0deg);
+mix-blend-mode:difference !important;
+opacity: 1.0;
+}
+
+.Main::after{
+background: rgba(255,255,255,0.0) !important;
+backdrop-filter: blur(0px);
+opacity: 0.2;
+}
+
+.dark .Main::after{
+background: rgba(0,0,0,0.0) !important;
+backdrop-filter: blur(0px);
 }
 
 .Main::before{
@@ -106,6 +159,26 @@ content: "";
 #filter: blur(40px);
 }
 
+.Main::after{
+perspective: 320px;
+    z-index: -2;
+    -webkit-transform: translateZ(0);
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background: inherit;
+    background-size: cover;
+    content: "";
+}
+
 .Main{
 perspective: 320px;
 padding-top: 0px !important;
@@ -127,7 +200,7 @@ position: absolute !important;
 background-size: 100% auto;
     width: 98.75vw !important;
     max-width: 98.75vw !important;
-    height: 100%;
+    //height: 100%;
 overflow-x: hidden;
 overflow-y: hidden;
 top:calc(5.0vh + 1px);
@@ -135,6 +208,60 @@ left:0px !important;
 z-index: -3;
 transform: translateZ(4px) scale(0.9875);
 }
+
+@media screen and (max-width: 430px){
+html, body {
+    max-width: 100%;
+    overflow-wrap: break-word;
+    overflow-x: hidden !important;
+}
+#main,.main,.Main,.Main::before{
+  background-size: cover !important;
+  background-position: center !important;
+width: 100% !important;
+max-width: 100% !important;
+padding: 0;
+perspective: 0vh !important;
+position: absolute !important;
+transform: translateZ(0) scale(1) !important;
+opacity: 1;
+filter:contrast(1) brightness(1) saturate(1) hue-rotate(10deg) !important;
+overflow-x:hidden !important;
+}
+.Main::after{
+opacity: 0 !important;
+width: 100% !important;
+max-width: 100% !important;
+}
+
+.container,div,.bio{
+margin-right: 10vw;
+}
+
+#profile,.portrait-title{
+margin-left:10vw;
+}
+.ul-edu{
+margin-left:25vw !important;
+margin-right:-25vw !important;
+}
+.col-sm-2{
+max-width:35% !important;margin-left:2.5vw;
+}
+.h1{
+max-width:80vw !important;margin-left:10vw !important;
+}
+.site-footer{
+max-width:60vw !important;margin-right:20vw !important;
+}
+.nav-item,.nav-link{color: rgb(0,0,0) !important;}
+}
+
+.avatar{
+background-image:inherit;
+mix-blend-mode:multiply;
+}
+
 
 #bgVideo{
 	position: fixed;
@@ -148,7 +275,7 @@ transform: translateZ(4px) scale(0.9875);
 
 #-----------------------
 
-p{}
+/* p{} */
 
 #main{
 top:7vh;
@@ -164,8 +291,9 @@ height:200px  !important;
 .bio,.exp,.skill,.kontakt{
 #color: rgb(250,250,250);
 #mix-blend-mode: difference;
-background: rgba(0,0,0,0) !important;
+background: inherit !important;
 #backdrop-filter: blur(40px);
+filter: none !important;
 }
 
 .bio{
@@ -174,6 +302,50 @@ padding-top: 90px !important;
 
 .skill{
 padding: 0px !important;
+}
+
+.skill .container .row.featurette .col-2 {
+    display: none;
+}
+
+.skill .container .row.featurette:hover .col-2 {display: block;filter: hue-rotate(-18deg) contrast(2);}
+
+.skill .container .row.featurette.section-heading.h1 :hover .section-heading.h1 {}
+.skill .container .row.featurette.section-heading.h1 ::before { 
+        content: '';
+        background:url('https://i.stack.imgur.com/ZrSlg.jpg');
+        background-size: 20px 20px;
+        position:absolute;
+        width:20px;
+        height:20px;
+        margin-left:-30px;}
+.skill,.skill .container,.skill .container .row .featurette,.col-md-12 .section-heading,.col-2 .col-sm-1,.featurette-icon{
+background: inherit !important;
+}
+
+#skill_iconset{
+background: inherit !important;
+}
+
+#skill_icons{
+color: rgba(255,100,50,1);
+background: none !important;
+mix-blend-mode: color-dodge;
+padding: 0;
+}
+
+.featurette-icon{
+/mix-blend-mode: color;
+}
+
+.form-group,.form-control{
+background: #fff !important;
+mix-blend-mode: difference;
+backdrop-filter: blur(40px);
+}
+
+.dark .form-group,.dark .form-control{
+background: #000 !important;
 }
 
 test{
@@ -190,6 +362,7 @@ font-size: xx-large;
 i.fas.fa-palette, i.fas.fa-moon, i.fas.fa-sun, i.fas.fa-search{
 font-size: medium !important;
 position: relative !important;
+background-position: center;
 top:-.128vh !important;
 }
 
@@ -242,7 +415,7 @@ right:0px;
   margin-right: 0px;
 z-index: -3;
 transform: translateZ(4px) scale(0.9875);
-#filter: invert(1) !important;
+filter: invert(0) contrast(1) brightness(1) !important;
 }
 
 .dark #bkgd{
@@ -267,12 +440,10 @@ right:0px;
   margin-right: 0px;
 z-index: -3;
 transform: translateZ(4px) scale(0.9875);
-filter: invert(0) !important;
+filter: invert(0) contrast(1.4) brightness(.8) !important;
 }
 
-.form-control{
-background: rgba(0,0,0,0) !important;
-}
+
 
 #top{
 #background: url(../../img/test2.jpg) !important;
@@ -342,7 +513,7 @@ margin-right: 10px;
 }
 
 div{
-background: rgba(0,0,0,0) ;
+background: rgba(255,255,255,0) ;
 font-family: Aron Grotesque Light;
 font-variant-ligatures: none;
 }
@@ -376,9 +547,10 @@ color: var(--mn-D-text-color) !important;
 }
 
 h3{
-font-family: Montserrat !important;
+font-family: Kiona !important;
 text-transform: lowercase !important;
-font-variant: small-caps;
+font-size: 1rem !important;
+font-variant: normal;
 #color: var(--mn-L3-text-color) !important;
 }
 .dark h3{
@@ -388,6 +560,17 @@ font-variant: small-caps;
 .container{
 z-index: 0;
 }
+
+.skill .container{
+max-width: 80vw;
+width: 80vw;
+margin-left: 0vw;
+}
+
+@media (min-width: 1200px){
+.skill .container{
+max-width: 80vw !important;
+}}
 
 .halign {
     float:left;
@@ -410,6 +593,7 @@ z-index: 0;
 
 .universal-wrapper,.universal-wrapper.pt-3,.article-style{
 background: rgba(0,0,0,0);
+isolation: isolate !important;
 }
 .universal-wrapper.pt-3{
 height:0px;
