--- a/static/css/darkbar.css
+++ b/static/css/darkbar.css
@@ -1,10 +1,12 @@
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
+
 
 /* Track */
 
 ::-webkit-scrollbar-track {
+	margin-top: 0vh !important;
   background-color: #000; 
   background-image: url(../../img/musicL3.png);
   background-blend-mode: overlay;
@@ -31,7 +33,7 @@ background-position: center !important;
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color:  #00f !important;
+  background-color:  #000 !important;
   background-image: url(../../img/musicL3.png);
   background-blend-mode: hard-light !important;
 #background-size: cover !important;
