--- a/static/css/lightbar.css
+++ b/static/css/lightbar.css
@@ -1,16 +1,18 @@
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 /* Track */
 
 ::-webkit-scrollbar-track {
+	margin-top: 0vh !important;
   background-color: #000; 
   background-image: url(../../img/musicL3.png);
   background-blend-mode: hard-light;
 }
 
 ::-webkit-scrollbar-track:hover {
+  width: 10px;
   background-color: #000; 
   background-image: url(../../img/musicL3.png);
   background-blend-mode: overlay;
@@ -28,7 +30,7 @@ background-position: center !important;
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color:  #003 !important;
+  background-color:  #000 !important;
   background-image: url(../../img/musicL3.png);
   background-blend-mode: hard-light !important;
 #background-size: cover !important;
