--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -193,14 +193,14 @@ padding-bottom: 0px !important;
 #background: url(../../img/main.png) !important;
 #backdrop-filter: blur(0px);
 #-webkit-backdrop-filter: blur(0px);
-position: absolute !important;
+position: fixed !important;
   background-attachment: fixed !important;
   background-position: center !important;
   background-repeat: no-repeat !important;
 background-size: 100% auto;
     width: 98.75vw !important;
     max-width: 98.75vw !important;
-    //height: 100%;
+    height: 100%;
 overflow-x: hidden;
 overflow-y: hidden;
 top:calc(5.0vh + 1px);
