--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -19,7 +19,8 @@ html,body{
 
 #navbar-main, .navbar{
 background: url(../../img/main.png) !important;
-background-size: 75% !important;
+#background-size: 75% !important;
+background-size: 100% !important;
 background-position: 45% 13% !important;
 background-repeat: repeat-x;
 #text-transform: uppercase !important;
@@ -62,21 +63,21 @@ mix-blend-mode: darken !important;
  color: #ff0000 !important;
 }
 .navbar-brand{
-left: -1em;
-top: 0em;
-color: rgb(250,250,250) !important;
+left: -2rem;
+top: 0rem;
+color: rgb(250,250,255) !important;
 mix-blend-mode: color-dodge !important;
 font-family: Kiona !important;
 text-transform: capitalize !important;
 #text-transform: uppercase !important;
-#font-size: 24px !important;
+font-size: 24px !important;
 font-size: 18px !important;
 #font-variant: small-caps;
 }
 
 .dark .navbar-brand{
-left: 4em;
-top: 0.15em;
+left: -2rem;
+top: 0.15rem;
 color: rgb(250,50,100) !important;
 font-family: Zenzai Itacha !important;
 text-transform: capitalize !important;
@@ -84,6 +85,23 @@ text-transform: capitalize !important;
 #font-size: 24px !important;
 font-size: 18px !important;
 font-variant: small-caps;
+}
+
+.nav-item{
+left: 5rem;
+}
+
+.fas.fa-moon{
+color: black;
+text-shadow: 0px 0px 2px white, 1px 1px 2px white;
+}
+
+.fas.fa-code{
+background: url(../../img/main.png) !important
+}
+
+.dark .nav-item{
+left: 5rem;
 }
 
 
