--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -189,7 +189,6 @@ background: inherit;
 background-size: cover;
 content: "";
 #filter: blur(40px);
-box-shadow: 0 0 8px 8px white inset;
 }
 
 .Main::after{
@@ -210,7 +209,6 @@ perspective: 320px;
     background: inherit;
     background-size: cover;
     content: "";
-box-shadow: 0 0 8px 8px white inset;
 }
 
 .Main{
@@ -227,7 +225,7 @@ padding-bottom: 0px !important;
 #background: url(../../img/main.png) !important;
 #backdrop-filter: blur(0px);
 #-webkit-backdrop-filter: blur(0px);
-position: fixed !important;
+position: absolute !important;
   background-attachment: fixed !important;
   background-position: center !important;
   background-repeat: no-repeat !important;
@@ -451,7 +449,7 @@ right:0px;
   margin-bottom: 0px;
   margin-right: 0px;
 z-index: -3;
-transform: translateZ(4px) scale(0.9875);
+transform: translateZ(16px) scale(0.9875);
 filter: invert(0) contrast(1) brightness(1) !important;
 }
 
@@ -476,7 +474,7 @@ right:0px;
   margin-bottom: 0px;
   margin-right: 0px;
 z-index: -3;
-transform: translateZ(4px) scale(0.9875);
+transform: translateZ(16px) scale(0.9875);
 filter: invert(0) contrast(1.4) brightness(.8) !important;
 }
 
