[auto] [glob] update

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -348,7 +348,8 @@ a.nav-link span {
 .bio,
 .exp,
 .skill,
-.kontakt {
+.kontakt,
+.publication {
     /* color: rgb(250, 250, 250); */
     /* mix-blend-mode: difference; */
     background: inherit !important;
