[auto] [glob] update

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -281,7 +281,8 @@ background-size: cover !important;
     display: flex;
     height: 100%;
     width: 100%;
-    overflow: auto;
+    overflow-y: hidden;
+    overflow-x: hidden;
     background: inherit;
     background-size: cover;
     content: "";
