--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -646,44 +646,38 @@ i.fas.fa-search {
     margin: 0em 0 !important;
 }
 
-hr{
-    height: 10px !important;
-    color: #000 !important;
-    background-color: #000 !important;
-}
-.dark hr{
-    height: 8px !important;
-    color: #fff !important;
-    background-color: #000 !important;
-}
 
-hr, .dark .ht {
+
+hr{
     display: block;
     border: 0;
     margin: 2em 0 !important;
     padding: 0;
- 
+    height: 10px !important;
+    color: #000 !important;
+    background-color: #000 !important;
+    /*background-image: url(../../img/musicL4.png) !important;*/
     backdrop-filter: invert(1) !important;
     mix-blend-mode: difference !important;
     background-image: none !important;
     background-position: center !important;
     background-blend-mode: overlay !important;
-
     filter: invert(0) drop-shadow(0px 4px 1px black) drop-shadow(0px 4px 4px black) !important;
     overflow: hidden;
 }
 
-.dark hr, .ht {
+.dark hr{
+    height: 8px !important;
+    color: #fff !important;
+    background-color: #000 !important;
     display: block;
     border: 0;
     margin: 2em 0 !important;
     padding: 0;
-
     background-image: url(../../img/musicL3.png) !important;
     background-attachement: relative !important;
     background-position: 5% 25% !important;
     backdrop-filter: invert(0) !important;
-
     background-blend-mode: hard-light !important;
     mix-blend-mode: difference !important;
     filter: grayscale(1) invert(0) drop-shadow(1px 1px 1px black) drop-shadow(5px 4px 4px black) !important;
