[auto] [glob] update

--- a/layouts/partials/site_head.html
+++ b/layouts/partials/site_head.html
@@ -212,4 +212,6 @@
   <link disabled id="lightbar" href="css/lightbar.css" rel="stylesheet" type="text/css">
   <link id="darkbar" href="css/darkbar.css" rel="stylesheet" type="text/css">
   <style>body{visibility:hidden;}</style>
+  {{ template "_internal/google_analytics.html" . }}
+  {{ template "_internal/google_analytics_async.html" . }}
 </head>
