--- a/layouts/partials/site_head.html
+++ b/layouts/partials/site_head.html
@@ -214,4 +214,13 @@
   <style>body{visibility:hidden;}</style>
   {{ template "_internal/google_analytics.html" . }}
   {{ template "_internal/google_analytics_async.html" . }}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GR4BWG4TZ5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GR4BWG4TZ5');
+</script>
 </head>
