[auto] [glob] update

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,7 @@
 
   {{ partial "navbar" . }}	
 <bkgd  id="main" class="Main"> </bkgd>
+<bkgd  id="main2" class="mMain"> </bkgd>
 <inner  class="inner">
   {{ block "main" . }}{{ end }}
 
