--- a/static/css/sp.css
+++ b/static/css/sp.css
@@ -10,14 +10,6 @@ div.main-music {
     display: none;
 }
 
-#btnControl:checked + label>div.main-a{
-  display: none;
-}
-
-#btnControl:checked + label>div.main-music {
-   display: block;
-}
-
 .dropdown-b-content{
 	visibility: hidden;
 }
@@ -40,4 +32,12 @@ div.main-music {
 
 .dark .main-music-dark{
     display: block;
+}
+
+.secret{
+    display: none;
+}
+
+a.a2{
+color:inherit;
 }
