--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -67,6 +67,7 @@
 
     </div>
   </div>
+  <div class="col-12 col-lg-2"></div>
   <div class="col-12 col-lg-8">
 
     {{/* Only display widget title in explicit instances of about widget, not in author pages. */}}
