--- a/layouts/partials/widgets/featurette.html
+++ b/layouts/partials/widgets/featurette.html
@@ -25,7 +25,7 @@
 			<i id="skill_icons" class="{{ $pack }} {{ $pack_prefix }}-{{ . }}" style="margin-left: auto;margin-right: auto;max-width: 12vmax;display:flex; justify-content: center;align-items: center;">
 			</i>
 		</div>{{ end }}
-    <h3 style="font-size: 1vmax !important;margin-left: auto;margin-right: auto;">{{ .name | markdownify | emojify }}</h3>
+    <h3 style="font-size: smaller !important; overflow-wrap: break-word; hyphens: auto; margin-left: auto;margin-right: auto;">{{ .name | markdownify | emojify }}</h3>
     {{ with .description }}<p style="font-size: 1vmax !important;margin-left: auto;margin-right: auto;">{{ . | markdownify | emojify }}</p>{{ end }}
   </div>
   {{ end }}
