--- a/static/css/darkbar.css
+++ b/static/css/darkbar.css
@@ -8,13 +8,13 @@
 ::-webkit-scrollbar-track {
     margin-top: 0vh !important;
     background-color: #000;
-    background-image: url(../../img/musicL3.png);
+    background-image: url(/hugo-website/img/musicL3.png);
     background-blend-mode: overlay;
 }
 
 ::-webkit-scrollbar-track:hover {
     background-color: #000 !important;
-    background-image: url(../../img/musicL3.png);
+    background-image: url(/hugo-website/img/musicL3.png);
     background-blend-mode: hard-light !important;
     background-size: cover !important;
     background-attachment: absolute !important;
@@ -38,7 +38,7 @@
 
 ::-webkit-scrollbar-thumb:hover {
     background-color: #000 !important;
-    background-image: url(../../img/musicL3.png);
+    background-image: url(/hugo-website/img/musicL3.png);
     background-blend-mode: hard-light !important;
     /* background-size: cover !important;*/
     background-attachment: absolute !important;
