--- a/static/css/lightbar.css
+++ b/static/css/lightbar.css
@@ -8,14 +8,14 @@
 ::-webkit-scrollbar-track {
     margin-top: 0vh !important;
     background-color: #000;
-    background-image: url(../../img/musicL3.png);
+    background-image: url(/hugo-website/img/musicL3.png);
     background-blend-mode: hard-light;
 }
 
 ::-webkit-scrollbar-track:hover {
     width: 10px;
     background-color: #000;
-    background-image: url(../../img/musicL3.png);
+    background-image: url(/hugo-website/img/musicL3.png);
     background-blend-mode: overlay;
 }
 
@@ -24,7 +24,7 @@
 
 ::-webkit-scrollbar-thumb {
     background-color: #fff !important;
-    background-image: url(../../img/musicL3.png);
+    background-image: url(/hugo-website/img/musicL3.png);
     background-blend-mode: normal !important;
     background-size: cover !important;
     background-attachment: absolute !important;
@@ -36,7 +36,7 @@
 
 ::-webkit-scrollbar-thumb:hover {
     background-color: #000 !important;
-    background-image: url(../../img/musicL3.png);
+    background-image: url(/hugo-website/img/musicL3.png);
     background-blend-mode: hard-light !important;
     /* background-size: cover !important;*/
     background-attachment: absolute !important;
